--- a/2035-logica-programacion-2-Aula1/index.html
+++ b/2035-logica-programacion-2-Aula1/index.html
@@ -18,12 +18,12 @@
         <div class="container__contenido">
             <div class="container__informaciones">
                 <div class="container__texto">
-                    <h1>Juego del número secreto</h1>
+                    <h1></h1>
                     <p class="texto__parrafo"></p>
                 </div>
-                <input type="number" min="1" max="10" class="container__input">
+                <input type="number" id="valorUsuario"  min="1" max="10" class="container__input">
                 <div class="chute container__botones">
-                    <button onclick="intentoDeUsuario();" class="container__boton">Intentar</button>
+                    <button onclick="verificarIntento();" class="container__boton">Intentar</button>
                     <button class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
                 </div>
             </div>
